overlapping elements corrected, homepage link to etch-a-sketch added

--- a/etch-a-sketch/index.css
+++ b/etch-a-sketch/index.css
@@ -25,9 +25,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 50px;
+    padding-top: 10px;
     gap: 10px;
-
+    margin-bottom: 50px;
 }
 
 #size {
@@ -37,7 +37,7 @@
     text-align: center;
     font-size: 32px;
     padding-left: 15px;
-    margin: 10px;
+    margin-bottom: 10px;
 }
 
 .buttons-container {
